syntax = "proto3";

service File {
    rpc Query (FileQueryRequest) returns (FileQueryResponse);
}

message FileQueryRequest {
    string fileId = 1;
}

message FileQueryResponse {
    enum Status {
        UNKNOWN = 0;
        INVALID_PARAM = -1;
        SUCCESS = 1;
        NOT_FOUND = 2;
    }
    Status status = 1;
    bytes stream = 2;
}